tests/type_args.expected
tests/type_args.mira:4:11: error: function 'add' expects 2 argument(s), got 1
