tests/type_args.mira
fn add(a: int, b: int): int { return a + b; }

fn main(): void {
    print(add(1));
}
